--- a/index.html
+++ b/index.html
@@ -99,10 +99,18 @@
 
     </div>
     <div class="section3_box3">
+        <div class="section3_box3_1">
 
-        <div class="section3_box3_1"></div>
-        <div class="section3_box3_2"></div>
+            <div class="section3_box1_box1">
+                <h2 class="section3_h23">Increase recognition your brand!</h2>
+                <p class="section3_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <hr style="width: 327px;border: 30px; solid; background: #55DFB4; height: 4px;">
 
+            </div>
+        </div>
+        <div class="section3_box3_2">
+            <img src="assets/Trumpet.png" alt="">
+        </div>
     </div>
 
 
@@ -110,7 +118,30 @@
 
 
 </section>
-<section class="section4"></section>
+<section class="section4">
+    <h2 class="section4_title">Pricing</h2>
+    <div class="section4_columns">
+        <div class="column_left">
+            <p class="title_left">Basic</p>
+            <p class="price_left">$0</p>
+
+        </div>
+        <div class="column_center">
+            <p class="title_center">Profesional</p>
+            <p class="price_center">$25</p>
+            <p class="conditions">Limited offer</p>
+        </div>
+        <div class="column_right">
+            <p class="title_right">Premium</p>
+            <p class="price_right">$60</p>
+            <p class="conditions">Limited offer</p>
+        </div>
+    </div>
+
+
+
+
+</section>
 <section class="section5"></section>
 <footer class="bottom"></footer>
 </body>
