--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="section3_box1_box1">
             <h2 class="section3_h21">Be always first</h2>
             <p class="section3_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr style="width: 327px;border: 30px; solid; background: #FB3B64; height: 4px;">
+            <hr style="width: 327px;border: 30px; background : #FB3B64; height: 4px;">
 
         </div>
         <div class="section3_picture">
@@ -90,7 +90,7 @@
         <div class="section3_box2_box2">
             <h2 class="section3_h22">Your shop is where you are!</h2>
             <p class="section3_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <hr style="width: 327px;border: 30px; solid; background:  #08A6E4; height: 4px;">
+            <hr style="width: 327px;border: 30px; background: #08A6E4; height: 4px;">
         </div>
         <div class="section3_picture2">
             <div class="section3_img"></div>
@@ -104,7 +104,7 @@
             <div class="section3_box1_box1">
                 <h2 class="section3_h23">Increase recognition your brand!</h2>
                 <p class="section3_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <hr style="width: 327px;border: 30px; solid; background: #55DFB4; height: 4px;">
+                <hr style="width: 327px;border: 30px; background: #55DFB4; height: 4px;">
 
             </div>
         </div>
@@ -119,22 +119,115 @@
 
 </section>
 <section class="section4">
-    <h2 class="section4_title">Pricing</h2>
+    <div class="Pricing_title">
+
+        <h2 class="section4_title">Pricing</h2>
+    </div>
+
     <div class="section4_columns">
         <div class="column_left">
-            <p class="title_left">Basic</p>
-            <p class="price_left">$0</p>
+            <p class="title_section4">Basic</p>
+            <p class="price">$0</p>
+            <div class="checkbox_offer">
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    100 MB HDD
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    1 Subdomain
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    2 E-mails
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    Two years license
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    Full support
+                </label>
+
+                <button class="begin">Begin</button>
+
+            </div>
+
 
         </div>
         <div class="column_center">
-            <p class="title_center">Profesional</p>
-            <p class="price_center">$25</p>
+            <p class="title_section4">Profesional</p>
+            <p class="price">$25</p>
             <p class="conditions">Limited offer</p>
+            <div class="checkbox_offer">
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    100 MB HDD
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    1 Subdomain
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    2 E-mails
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    Two years license
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    Full support
+                </label>
+                <button class="begin">Begin</button>
+
+            </div>
         </div>
         <div class="column_right">
-            <p class="title_right">Premium</p>
-            <p class="price_right">$60</p>
+            <p class="title_section4">Premium</p>
+            <p class="price">$60</p>
             <p class="conditions">Limited offer</p>
+            <div class="checkbox_offer">
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    100 MB HDD
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    1 Subdomain
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    2 E-mails
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    Two years license
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                    <span></span>
+                    Full support
+                </label>
+
+                <button class="begin">Begin</button>
+            </div>
         </div>
     </div>
 
@@ -142,7 +235,63 @@
 
 
 </section>
-<section class="section5"></section>
-<footer class="bottom"></footer>
+<section class="section5">
+
+    <div class="section5_left">
+       <h3 id="Title">Any questions?</h3>
+        <span>Leave your email address or call us!</span>
+
+        <div class="contacts">
+            <div class="mail"></div>
+            <span class="mail2">info@bestshop.xyz</span>
+            <div class="call"></div>
+            <span class="call2">123 456 789</span>
+
+        </div>
+
+
+
+    </div>
+    <div class="section5_right">
+        <p class="name"> Name</p>
+        <input type="text"/>
+        <p class="email"> Email</p>
+        <input type="text"/>
+        <div class="id-checkbox">
+            <input type="checkbox" id="check">
+            <label for="check">I hereby give consent for my personal data included in my application to be
+                processed for the purposes of the recruitment process under the European Parliament's and Council of the
+                European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the
+                processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC
+                (Data Protection Directive)</label>
+            <button class="Send">Send</button>
+        </div>
+
+
+    </div>
+
+
+</section>
+<footer class="bottom">
+    <div class="boottom_left">
+        <div class="logo2">BestShop</div>
+        <div class="trade_mark">© 2019 BestShop LTD, All Rights Reserved</div>
+    </div>
+
+    <div class="social_media">
+        <a href="https://twitter.com/?lang=pl">
+            <div class="twitter" ></div>
+        </a>
+        <a href="https://pl-pl.facebook.com/">
+            <div class="facebook">></div>
+        </a>
+
+
+
+    </div>
+
+
+
+</footer>
 </body>
 </html>
