--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Best shop</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-
 </head>
 <body>
 <header class="top_header">
@@ -18,41 +17,34 @@
             <li>prices</li>
             <li>contact</li>
         </ul>
-
     </nav>
 </header>
 <section class="section1">
     <h1>Sell more!</h1>
     <p>Open shop on our platform and increase your sales</p>
-    <button class="btn_cta"> Open your shop </button>
+    <button class="btn_cta">
+        <a  href="">Open your shop</a>
+    </button>
     <img src="assets/Background.png" alt="">
 </section>
 <section class="section2">
-
     <header class="section2_header">
         <h2 class="section2_h2">The most popular sales platform in country</h2>
     </header>
-
-
 <div class="section2_columns">
-
     <div class="section2_column1">
-
         <div class="circle_picture">
             <div class="circle"></div>
             <img src="assets/Person.svg" alt="">
         </div>
-
         <span class="numbers">100000+</span>
         <span class="text">daily entries</span>
-
     </div>
     <div class="section2_column2">
         <div class="circle_picture">
             <div class="circle2"></div>
             <img src="assets/Eye.svg" alt="">
         </div>
-
         <span class="numbers">2000000+</span>
         <span class="text">seen products every day</span>
     </div>
@@ -61,30 +53,22 @@
             <div class="circle3"></div>
             <img src="assets/Catalog.svg" alt="">
         </div>
-
         <span class="numbers">10000+</span>
         <span class="text">added posts daily</span>
     </div>
-
 </div>
-
-
-
 </section>
 <section class="section3">
-
     <div class="section3_box1">
         <div class="section3_box1_box1">
             <h2 class="section3_h21">Be always first</h2>
             <p class="section3_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             <hr style="width: 327px;border: 30px; background : #FB3B64; height: 4px;">
-
         </div>
         <div class="section3_picture">
             <div class="section3_img2"></div>
             <img src="assets/Macbook.png" alt="">
         </div>
-
     </div>
     <div class="section3_box2">
         <div class="section3_box2_box2">
@@ -96,34 +80,24 @@
             <div class="section3_img"></div>
             <img src="assets/iPhone.png" alt="">
         </div>
-
     </div>
     <div class="section3_box3">
         <div class="section3_box3_1">
-
             <div class="section3_box1_box1">
                 <h2 class="section3_h23">Increase recognition your brand!</h2>
                 <p class="section3_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <hr style="width: 327px;border: 30px; background: #55DFB4; height: 4px;">
-
             </div>
         </div>
         <div class="section3_box3_2">
             <img src="assets/Trumpet.png" alt="">
         </div>
     </div>
-
-
-
-
-
 </section>
 <section class="section4">
     <div class="Pricing_title">
-
         <h2 class="section4_title">Pricing</h2>
     </div>
-
     <div class="section4_columns">
         <div class="column_left">
             <p class="title_section4">Basic</p>
@@ -154,12 +128,10 @@
                     <span></span>
                     Full support
                 </label>
-
-                <button class="begin">Begin</button>
-
             </div>
-
-
+            <button class="begin">
+                <a  href="">Begin</a>
+            </button>
         </div>
         <div class="column_center">
             <p class="title_section4">Profesional</p>
@@ -191,9 +163,12 @@
                     <span></span>
                     Full support
                 </label>
-                <button class="begin">Begin</button>
+
 
             </div>
+            <button class="begin">
+                <a  href="">Begin</a>
+            </button>
         </div>
         <div class="column_right">
             <p class="title_section4">Premium</p>
@@ -225,32 +200,23 @@
                     <span></span>
                     Full support
                 </label>
-
-                <button class="begin">Begin</button>
             </div>
+            <button class="begin">
+                <a  href="">Begin</a>
+            </button>
         </div>
     </div>
-
-
-
-
 </section>
 <section class="section5">
-
     <div class="section5_left">
        <h3 id="Title">Any questions?</h3>
         <span>Leave your email address or call us!</span>
-
         <div class="contacts">
             <div class="mail"></div>
             <span class="mail2">info@bestshop.xyz</span>
             <div class="call"></div>
             <span class="call2">123 456 789</span>
-
         </div>
-
-
-
     </div>
     <div class="section5_right">
         <p class="name"> Name</p>
@@ -266,18 +232,13 @@
                 (Data Protection Directive)</label>
             <button class="Send">Send</button>
         </div>
-
-
     </div>
-
-
 </section>
 <footer class="bottom">
     <div class="boottom_left">
         <div class="logo2">BestShop</div>
         <div class="trade_mark">© 2019 BestShop LTD, All Rights Reserved</div>
     </div>
-
     <div class="social_media">
         <a href="https://twitter.com/?lang=pl">
             <div class="twitter" ></div>
@@ -285,13 +246,7 @@
         <a href="https://pl-pl.facebook.com/">
             <div class="facebook">></div>
         </a>
-
-
-
     </div>
-
-
-
 </footer>
 </body>
 </html>
